Adding Tmux line

--- a/Tmux/tmux.conf
+++ b/Tmux/tmux.conf
@@ -1,8 +1,8 @@
 #--------------------------------------------------
 #
 # Author        :   Lasercata
-# Last modif    :   2023.03.07
-# Version       :   v2.0
+# Last modif    :   2023.03.19
+# Version       :   v2.1
 #
 #--------------------------------------------------
 
@@ -44,8 +44,8 @@ bind \" split-window -hc "#{pane_current_path}"
 bind % split-window -vc "#{pane_current_path}"
 
 # set color for status bar
-set-option -g status-bg \#ff4500
-set-option -g status-fg \#000000
+#set-option -g status-bg \#ff4500
+#set-option -g status-fg \#000000
 
 
 #---Plugins
@@ -56,6 +56,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Tmux sidebar
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @sidebar-tree-command 'tree -C' #Colorize the tree
+
+# Tmux line
+#if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
+source ~/.tmux-status.conf
 
 #-Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
