--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,8 @@
 #--------------------------------------------------
 #
 # Author        :   Lasercata
-# Last modif    :   2023.03.19
-# Version       :   v2.1
+# Last modif    :   2023.04.14
+# Version       :   v2.2
 #
 #--------------------------------------------------
 
@@ -18,6 +18,12 @@ bind -r j select-pane -D
 bind -r h select-pane -L 
 bind -r l select-pane -R
 
+# Control + hjkl to change pane, without prefix
+bind -n C-k select-pane -U 
+bind -n C-j select-pane -D 
+bind -n C-h select-pane -L 
+bind -n C-l select-pane -R
+
 # vim-like pane resizing  
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
@@ -25,14 +31,14 @@ bind -r C-h resize-pane -L
 bind -r C-l resize-pane -R
 
 # and now unbind keys
-unbind Up     
-unbind Down   
-unbind Left   
-unbind Right  
+unbind Up
+unbind Down
+unbind Left
+unbind Right
 
-unbind C-Up   
-unbind C-Down 
-unbind C-Left 
+unbind C-Up
+unbind C-Down
+unbind C-Left
 unbind C-Right
 
 # Vi scroll mode
@@ -58,7 +64,6 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @sidebar-tree-command 'tree -C' #Colorize the tree
 
 # Tmux line
-#if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
 source ~/.tmux-status.conf
 
 #-Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
