--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,17 +18,17 @@ bind -r j select-pane -D
 bind -r h select-pane -L 
 bind -r l select-pane -R
 
-# Control + hjkl to change pane, without prefix
-bind -n C-k select-pane -U 
-bind -n C-j select-pane -D 
-bind -n C-h select-pane -L 
-bind -n C-l select-pane -R
+# Alt + hjkl to change pane, without prefix
+bind -n M-k select-pane -U 
+bind -n M-j select-pane -D 
+bind -n M-h select-pane -L 
+bind -n M-l select-pane -R
 
 # vim-like pane resizing  
-bind -r C-k resize-pane -U
-bind -r C-j resize-pane -D
-bind -r C-h resize-pane -L
-bind -r C-l resize-pane -R
+bind -r k resize-pane -U
+bind -r j resize-pane -D
+bind -r h resize-pane -L
+bind -r l resize-pane -R
 
 # and now unbind keys
 unbind Up
