--- a/i3wm/config
+++ b/i3wm/config
@@ -200,6 +200,11 @@ bindsym $mod+o exec "i3lock -t -c 000000 -i /home/lasercata/Pictures/lasercata_l
 # exec "xautolock -detectsleep -time 20 -locker \"i3block -t -c 000000 -i /home/lasercata/Pictures/lasercata_logo_fly_parrot_bk/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
 
 
+#------Gaps
+default_border pixel 0
+gaps inner 10
+
+
 #------For integration in KDE plasma
 # Used https://github.com/avivace/dotfiles
 
