--- a/i3wm/config
+++ b/i3wm/config
@@ -164,13 +164,19 @@ bindsym $mod+r mode "resize"
 #------Status bar
 # Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
 exec_always --no-startup-id ~/.config/polybar/launch.sh
-client.focused          #2e3436 #2e3436 #ffffff #2e3436   #2e3436
 exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/Flow_5120x2880.jpg
 
 # bar {
 #     i3bar_command i3bar --transparency
 #     status_command i3status
 # }
+
+
+#------Colors
+# class                 border  backgr. text    indicator child_border
+client.focused          #ff4500 #000000 #ff4500 #ff4500   #ff4500
+client.unfocused        #0d1010 #212121 #808080 #424242   #0d1010
+client.focused_inactive #0d1010 #212121 #808080 #424242   #0d1010
 
 
 #------Media controls
@@ -184,8 +190,8 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 1 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 1 # decrease screen brightness
 
 #---Media player
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioPlay exec cmus-remote -u
+bindsym XF86AudioPause exec cmus-remote -u
 bindsym XF86AudioNext exec cmus-remote -k +5
 bindsym XF86AudioPrev exec cmus-remote -k -5
 
