Changing kitty colors

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,9 +2,9 @@
 
 #--------------------------------------------
 #
-# Last modification : 2023.05.07
+# Last modification : 2023.05.08
 # Author            : kitty, then Lasercata
-# Version           : v1.0
+# Version           : v1.1
 #
 #--------------------------------------------
 
@@ -632,7 +632,7 @@ tab_bar_background none
 
 #: Color scheme {{{
 
-foreground #dddddd
+foreground #fcfcfc
 background #000000
 
 #: The foreground and background colors
@@ -708,37 +708,37 @@ color8 #767676
 
 #: black
 
-color1 #cc0403
-color9 #f2201f
+color1 #ed1515
+color9 #c0392b
 
 #: red
 
-color2  #19cb00
-color10 #23fd00
+color2  #11d116
+color10 #1cdc9a
 
 #: green
 
-color3  #cecb00
-color11 #fffd00
+color3  #f67400
+color11 #fdbc4b
 
-#: yellow
+#: yellow (now orange.)
 
-color4  #0d73cc
-color12 #1a8fff
+color4  #1d99f3
+color12 #3daee9
 
 #: blue
 
-color5  #cb1ed1
-color13 #fd28ff
+color5  #9b59b6
+color13 #8e44ad
 
 #: magenta
 
-color6  #0dcdcd
-color14 #14ffff
+color6  #1abc9c
+color14 #16a085
 
 #: cyan
 
-color7  #dddddd
+color7  #fcfcfc
 color15 #ffffff
 
 #: white
