--- a/i3wm/config
+++ b/i3wm/config
@@ -2,7 +2,7 @@
 #
 # Last modification : 2023.05.08
 # Author            : Lasercata
-# Version           : v1.3
+# Version           : v1.4
 #
 #--------------------------------
 
@@ -209,6 +209,11 @@ bindsym $mod+o exec "i3lock -t -c 000000 -i /home/lasercata/Pictures/lasercata_l
 
 # Auto lock the screen
 # exec "xautolock -detectsleep -time 20 -locker \"i3block -t -c 000000 -i /home/lasercata/Pictures/lasercata_logo_fly_parrot_bk/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
+
+
+#------Clipboard manager (diodon)
+exec_always --no-startup-id diodon
+bindsym Control+Mod1+c exec diodon
 
 
 #------Gaps
