--- a/i3wm/config
+++ b/i3wm/config
@@ -2,7 +2,7 @@
 #
 # Last modification : 2023.05.08
 # Author            : Lasercata
-# Version           : v1.4
+# Version           : v1.5
 #
 #--------------------------------
 
@@ -31,12 +31,12 @@ bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 bindsym --release button2 kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
+# start a program launcher
+# There also is the (new) i3-dmenu-desktop which only displays applications shipping a .desktop file. It is a wrapper around dmenu, so you need that installed.
+# bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec "rofi -theme Monokai -modi drun,run -show run"
+# Use ctrl+tab to change mode
 
 # change focus
 bindsym $mod+h focus left
