polybarl: fix wifi icons, colors
using nerd font wifi icons.

--- a/polybar/modules/system.ini
+++ b/polybar/modules/system.ini
@@ -35,14 +35,14 @@ type = internal/network
 interface = wlp3s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal><label-connected>
 ; format-connected = <ramp-signal> 
 label-connected =  %essid%
-ramp-signal-0 = "睊"
-ramp-signal-1 = " "
-ramp-signal-2 = " "
-ramp-signal-3 = "直"
-ramp-signal-4 = "直"
+ramp-signal-0 = "󰤯 "
+ramp-signal-1 = "󰤟 "
+ramp-signal-2 = "󰤢 "
+ramp-signal-3 = "󰤥 "
+ramp-signal-4 = "󰤨 "
 
 label-connected-underline = ${colors.cyan-2}
 ramp-signal-underline = ${colors.cyan-2}
@@ -50,7 +50,7 @@ ramp-signal-background = ${colors.bg-1}
 ramp-signal-foreground = ${colors.cyan-2}
 
 format-disconnected = <label-disconnected>
-label-disconnected = "睊"
+label-disconnected = "󰤭 "
 format-disconnected-underline = ${colors.red-3}
 format-disconnected-background = ${colors.bg-1}
 format-disconnected-foreground = ${colors.red-3}
@@ -126,13 +126,13 @@ full-at = 98
 
 format-charging = <animation-charging><label-charging>
 label-charging = %percentage%%
-label-charging-underline = ${colors.red-2}
+label-charging-underline = ${colors.ff4500}
 label-charging-background = ${colors.bg-1}
 label-charging-foreground = ${colors.fg-3}
 
-animation-charging-underline = ${colors.red-2}
+animation-charging-underline = ${colors.ff4500}
 animation-charging-background = ${colors.bg-1}
-animation-charging-foreground = ${colors.red-2}
+animation-charging-foreground = ${colors.ff4500}
 animation-charging-0 = " "
 animation-charging-1 = " "
 animation-charging-2 = " "
@@ -143,11 +143,11 @@ animation-charging-6 = " "
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity><label-discharging>
-format-discharging-underline = ${colors.red-2}
+format-discharging-underline = ${colors.ff4500}
 format-discharging-background = ${colors.bg-1}
-format-discharging-foreground = ${colors.red-2}
+format-discharging-foreground = ${colors.ff4500}
 label-discharging = ${self.label-charging}
-label-discharging-underline = ${colors.red-2}
+label-discharging-underline = ${colors.ff4500}
 label-discharging-background = ${colors.bg-1}
 label-discharging-foreground = ${colors.fg-3}
 
@@ -163,14 +163,14 @@ ramp-capacity-8 = " "
 ramp-capacity-9 = " "
 
 format-full-prefix-background = ${colors.bg-1}
-format-full-prefix-foreground = ${colors.red-2}
+format-full-prefix-foreground = ${colors.ff4500}
 format-full-prefix = " "
 label-full = ${self.label-charging}
-label-full-underline = ${colors.red-2}
+label-full-underline = ${colors.ff4500}
 label-full-background = ${colors.bg-1}
 label-full-foreground = ${colors.fg-3}
 format-full = <label-full>
-format-full-underline = ${colors.red-2}
+format-full-underline = ${colors.ff4500}
 
 
 [module/powermenu]
