--- a/polybar/modules/info.ini
+++ b/polybar/modules/info.ini
@@ -2,12 +2,15 @@
 type = custom/script
 exec = ~/.config/polybar/scripts/info-hackspeed.sh
 tail = true
+
 format-prefix = "  "
 format = <label>
 label = %output%
+
 format-prefix-underline = ${colors.ff4500}
 format-prefix-foreground = ${colors.ff4500}
 format-prefix-background = ${colors.bg-1}
+
 label-underline = ${colors.ff4500}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-3}
@@ -101,12 +104,12 @@ label-foreground = ${colors.fg-3}
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-underline = ${colors.red-2}
+format-prefix-underline = ${colors.ff4500}
 format-prefix-background = ${colors.bg-1}
-format-prefix-foreground = ${colors.red-2}
+format-prefix-foreground = ${colors.ff4500}
 format-background = ${colors.bg-1}
 label = %percentage_used:2%%
-label-underline = ${colors.red-2}
+label-underline = ${colors.ff4500}
 label-foreground = ${colors.fg-3}
  
 
