polybar: change i3 focused label color

--- a/polybar/modules/i3.ini
+++ b/polybar/modules/i3.ini
@@ -13,6 +13,7 @@ label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
+label-focused-foreground = ${colors.ff4500}
 label-focused-background = ${colors.bg-1}
 label-focused-underline = ${colors.ff4500}
 label-focused-padding = 2
@@ -25,7 +26,6 @@ label-unfocused-background = ${colors.bg-3}
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
 label-visible-background = ${self.label-focused-background}
-;label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
