polybar: Adding the defaults colors in `colors.ini` for resize mode

--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -38,3 +38,12 @@ ff4500 = #ff4500
 purple-1 = #8b85e0
 purple-2 = #928be2
 purple-3 = #978fec
+
+;Defaults
+background = #2e3436
+background-alt = #444
+foreground = #dfdfdf
+foreground-alt = #555
+primary = #ffb52a
+secondary = #e60053
+alert = #bd2c40
