polybar: adding transparency

--- a/polybar/modules/misc.ini
+++ b/polybar/modules/misc.ini
@@ -3,14 +3,14 @@ type = custom/text
 content = /
 content-background = ${colors.bg-1}
 content-foreground = ${colors.bg-3}
-content-font = 3
+; content-font = 3
 
 [module/line]
 type = custom/text
 content = |
 content-background = ${colors.bg-1}
 content-foreground = ${colors.fg-3}
-content-font = 3
+; content-font = 3
 
 
 [module/space]
@@ -24,26 +24,26 @@ content-foreground = ${colors.bg-1}
 type = custom/text
 content-background = ${colors.bg-3}
 content-foreground = ${colors.bg-1}
-content-font = 2
+content-font = 1
 content = ""
 
 [module/right]
 type = custom/text
 content-background = ${colors.bg-3}
 content-foreground = ${colors.bg-1}
-content-font = 2
+; content-font = 2
 content = ""
 
 [module/rl]
 type = custom/text
 content-background = ${colors.bg-3}
 content-foreground = ${colors.bg-1}
-content-font = 2
+; content-font = 2
 content =""
 
 [module/rl-alt]
 type = custom/text
 content-background = ${colors.bg-3}
 content-foreground = ${colors.bg-1}
-content-font = 2
+; content-font = 2
 content =" "
