--- a/polybar/modules/system.ini
+++ b/polybar/modules/system.ini
@@ -45,6 +45,8 @@ ramp-signal-3 = "󰤥 "
 ramp-signal-4 = "󰤨 "
 
 label-connected-underline = ${colors.cyan-2}
+label-connected-foreground = ${colors.fg-1}
+label-connected-background = ${colors.bg-1}
 ramp-signal-underline = ${colors.cyan-2}
 ramp-signal-background = ${colors.bg-1}
 ramp-signal-foreground = ${colors.cyan-2}
