--- a/polybar/config
+++ b/polybar/config
@@ -20,7 +20,7 @@
 ;
 ; Last modification : 2023.05.09
 ; Author            : Polybar, then Lasercata
-; Version           : v2.0.1
+; Version           : v2.0.2
 ;
 ; This is used in i3 (window manager)
 ; Inspired from https://github.com/Vallen217/dotfiles/tree/master/.config/polybar for v2.0.0.
@@ -47,6 +47,7 @@ offset-x = 98%
 offset-y = 8pt
 fixed-center = true
 
+; background = ${colors.bg-3}
 background = ${colors.bg-3}
 foreground = ${colors.fg-3}
 
@@ -63,18 +64,20 @@ module-margin-left = 0
 module-margin-right = 0
 
 font-0 = Hack Nerd Font:size=10
+font-1 = Hack Nerd Font:size=12
 ;font-1 = fixed:pixelsize=10;1
 ; font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-1 = siji:pixelsize=11;1
 ; font-3 = FontAwesome:size=10
 
-modules-left = left i3 slash info-hackspeed space slash space cmus right
-modules-center = left memory slash cpu slash temperature right
-modules-right = left alsa slash wlan slash eth slash battery slash time slash date right
+modules-left = i3 slash space info-hackspeed space slash space cmus
+modules-center = memory space slash space cpu space slash space temperature
+modules-right = alsa space slash space wlan space slash space battery space slash space time space slash space date space
 
 tray-position = right
 tray-padding = 2
-;tray-background = #0063ff
+; tray-background = #000063ff
+; tray-transparent = true
 
 ;wm-restack = bspwm
 ; wm-restack = i3
@@ -97,7 +100,7 @@ screenchange-reload = true
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
-pseudo-transparency = true
+pseudo-transparency = false
 
 
 ; vim:ft=dosini
