--- a/polybar/modules/cmus.ini
+++ b/polybar/modules/cmus.ini
@@ -1,7 +1,7 @@
 [module/cmus]
 type = custom/script
 
-exec = $HOME/.config/polybar/scripts/cmus.sh
+exec = $HOME/.config/polybar/scripts/cmus.py
 exec-if = pgrep -x cmus
 interval = 1
 
@@ -9,7 +9,8 @@ format = <label>
 format-prefix = "󰝚 "
 
 label = %output%
-label-maxlen = 50
+; label-maxlen = 50
+; this is done in the python script
 
 label-underline = ${colors.ff4500}
 label-background = ${colors.bg-1}
@@ -18,3 +19,5 @@ label-foreground = ${colors.fg-3}
 format-prefix-underline = ${colors.ff4500}
 format-prefix-foreground = ${colors.ff4500}
 format-prefix-background = ${colors.bg-1}
+
+click-left = cmus-remote -u
