Adding bluetooth, clickable wifi

--- a/polybar/modules/system.ini
+++ b/polybar/modules/system.ini
@@ -33,16 +33,18 @@ card = intel_backlight
 [module/wlan]
 type = internal/network
 interface = wlp3s0
-interval = 3.0
+interval = 1
 
 format-connected = <ramp-signal><label-connected>
 ; format-connected = <ramp-signal> 
-label-connected =  %essid%
-ramp-signal-0 = "󰤯 "
-ramp-signal-1 = "󰤟 "
-ramp-signal-2 = "󰤢 "
-ramp-signal-3 = "󰤥 "
-ramp-signal-4 = "󰤨 "
+
+; The label and icons are clickable and toggle wifi.
+label-connected =  %{A1:wifi toggle:}%essid%%{A}
+ramp-signal-0 = %{A1:wifi toggle:}󰤯 %{A}
+ramp-signal-1 = %{A1:wifi toggle:}󰤟 %{A}
+ramp-signal-2 = %{A1:wifi toggle:}󰤢 %{A}
+ramp-signal-3 = %{A1:wifi toggle:}󰤥 %{A}
+ramp-signal-4 = %{A1:wifi toggle:}󰤨 %{A}
 
 label-connected-underline = ${colors.cyan-2}
 label-connected-foreground = ${colors.fg-1}
@@ -52,7 +54,7 @@ ramp-signal-background = ${colors.bg-1}
 ramp-signal-foreground = ${colors.cyan-2}
 
 format-disconnected = <label-disconnected>
-label-disconnected = "󰤭 "
+label-disconnected = %{A1:wifi toggle:}󰤭 %{A}
 format-disconnected-underline = ${colors.red-3}
 format-disconnected-background = ${colors.bg-1}
 format-disconnected-foreground = ${colors.red-3}
@@ -73,6 +75,14 @@ format-disconnected =
 ;format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
+
+
+[module/bluetooth]
+type = custom/script
+exec = $HOME/.config/polybar/scripts/bluetooth.sh
+interval = 1
+click-left = exec bluetooth toggle
+format-padding = 1
 
 
 [module/pulseaudio]
