--- a/polybar/config
+++ b/polybar/config
@@ -18,9 +18,9 @@
 
 ;---------------------------------------------
 ;
-; Last modification : 2023.05.09
+; Last modification : 2023.05.10
 ; Author            : Polybar, then Lasercata
-; Version           : v2.0.3
+; Version           : v2.0.4
 ;
 ; This is used in i3 (window manager)
 ; Inspired from https://github.com/Vallen217/dotfiles/tree/master/.config/polybar for v2.0.0.
@@ -72,7 +72,7 @@ font-1 = Hack Nerd Font:size=12
 
 modules-left = i3 slash space info-hackspeed space slash space cmus
 modules-center = memory space slash space cpu space slash space temperature
-modules-right = alsa space slash space wlan space slash space battery space slash space time space slash space date space
+modules-right = alsa space slash space wlan space slash bluetooth slash space battery space slash space time space slash space date space
 
 tray-position = right
 tray-padding = 2
