--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -77,12 +77,12 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-format-mounted-prefix = " "
-format-mounted-prefix-underline = ${colors.purple-1}
+format-mounted-prefix = " "
+format-mounted-prefix-underline = ${colors.ff4500}
 format-mounted-prefix-background = ${colors.bg-1}
-format-mounted-prefix-foreground = ${colors.purple-2}
-label-mounted = %used%
-label-mounted-underline = ${colors.purple-1}
+format-mounted-prefix-foreground = ${colors.ff4500}
+label-mounted = %percentage_used%%
+label-mounted-underline = ${colors.ff4500}
 label-mounted-background = ${colors.bg-1}
 label-mounted-foreground = ${colors.fg-3}
 
@@ -104,12 +104,12 @@ label-foreground = ${colors.fg-3}
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-underline = ${colors.ff4500}
+format-prefix-underline = ${colors.cyan-1}
 format-prefix-background = ${colors.bg-1}
-format-prefix-foreground = ${colors.ff4500}
+format-prefix-foreground = ${colors.cyan-1}
 format-background = ${colors.bg-1}
 label = %percentage_used:2%%
-label-underline = ${colors.ff4500}
+label-underline = ${colors.cyan-1}
 label-foreground = ${colors.fg-3}
  
 
