polybar: adding `maxlen` to wlan label

--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -40,6 +40,7 @@ format-connected = <ramp-signal><label-connected>
 
 ; The label and icons are clickable and toggle wifi.
 label-connected =  %{A1:wifi toggle:}%essid%%{A}
+label-connected-maxlen = 25
 ramp-signal-0 = %{A1:wifi toggle:}󰤯 %{A}
 ramp-signal-1 = %{A1:wifi toggle:}󰤟 %{A}
 ramp-signal-2 = %{A1:wifi toggle:}󰤢 %{A}
