Tmux: change switch pane binding
Now prefix + hjkl of C-M-hjkl.
Resizing with prefix + C-hjkl.

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 #--------------------------------------------------
 #
 # Author        :   Lasercata
-# Last modif    :   2023.04.14
-# Version       :   v2.2
+# Last modif    :   2023.05.12
+# Version       :   v2.3
 #
 #--------------------------------------------------
 
@@ -19,16 +19,16 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # Alt + hjkl to change pane, without prefix
-bind -n M-k select-pane -U 
-bind -n M-j select-pane -D 
-bind -n M-h select-pane -L 
-bind -n M-l select-pane -R
+bind -n C-M-k select-pane -U 
+bind -n C-M-j select-pane -D 
+bind -n C-M-h select-pane -L 
+bind -n C-M-l select-pane -R
 
 # vim-like pane resizing  
-bind -r k resize-pane -U
-bind -r j resize-pane -D
-bind -r h resize-pane -L
-bind -r l resize-pane -R
+bind -r C-k resize-pane -U
+bind -r C-j resize-pane -D
+bind -r C-h resize-pane -L
+bind -r C-l resize-pane -R
 
 # and now unbind keys
 unbind Up
