--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -61,6 +61,32 @@ format-disconnected-background = ${colors.bg-1}
 format-disconnected-foreground = ${colors.red-3}
 
 
+[module/network]
+type = custom/script
+
+;This does the same as the module above, but there is a state for wifi off (it is not the same as disconnected)
+
+exec = $HOME/.config/polybar/scripts/network.py
+interval = 1
+
+format = <label>
+; format-prefix = "󰝚 "
+
+label = %output%
+; label-maxlen = 50
+; this is done in the python script
+
+label-underline = ${colors.cyan-2}
+label-background = ${colors.bg-1}
+label-foreground = ${colors.fg-3}
+
+format-prefix-underline = ${colors.ff4500}
+format-prefix-foreground = ${colors.ff4500}
+format-prefix-background = ${colors.bg-1}
+
+click-left = wifi toggle
+
+
 [module/eth]
 type = internal/network
 interface = enp2s0
