--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -2,9 +2,9 @@
 
 #--------------------------------
 #
-# Last modification : 2023.05.12
+# Last modification : 2023.05.15
 # Author            : Lasercata
-# Version           : v1.6.5
+# Version           : v1.6.6
 #
 #--------------------------------
 
@@ -38,9 +38,10 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #---Wallpaper
 # exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/Flow_5120x2880.jpg
-# exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/7y7hhusqo5xa1.png
-exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/aoraki-mount-cook-national-park-lake-sunset-reflection-1920x1080-8658.jpg
+# exec_always --no-startup-id feh --bg-scale /home/lasercata/.wallpapers/7y7hhusqo5xa1.png
+# exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/aoraki-mount-cook-national-park-lake-sunset-reflection-1920x1080-8658.jpg
 # exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/pragser-wildsee-lake-dolomite-mountains-italy-scenic-1920x1080-8839.jpg
+exec_always --no-startup-id feh --bg-scale /home/lasercata/.wallpapers/misty-mountains-v0-zwq468b18ywa1.jpg
 
 #---Windows colors
 # class                 border  backgr. text    indicator child_border
