polybar: better colors
Underline from `network` and `bluetooth` script ;
cmus : only play/pause logo

--- a/config/polybar/modules/cmus.ini
+++ b/config/polybar/modules/cmus.ini
@@ -6,7 +6,7 @@ exec-if = pgrep -x cmus
 interval = 1
 
 format = <label>
-format-prefix = "󰝚 "
+; format-prefix = "󰝚 "
 
 label = %output%
 ; label-maxlen = 50
