--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -76,13 +76,13 @@ label = %output%
 ; label-maxlen = 50
 ; this is done in the python script
 
-label-underline = ${colors.cyan-2}
-label-background = ${colors.bg-1}
-label-foreground = ${colors.fg-3}
-
-format-prefix-underline = ${colors.ff4500}
-format-prefix-foreground = ${colors.ff4500}
-format-prefix-background = ${colors.bg-1}
+; label-underline = ${colors.cyan-2}
+; label-background = ${colors.bg-1}
+; label-foreground = ${colors.fg-3}
+;
+; format-prefix-underline = ${colors.ff4500}
+; format-prefix-foreground = ${colors.ff4500}
+; format-prefix-background = ${colors.bg-1}
 
 click-left = wifi toggle
 
@@ -109,7 +109,7 @@ type = custom/script
 exec = $HOME/.config/polybar/scripts/bluetooth.sh
 interval = 1
 click-left = exec bluetooth toggle
-format-padding = 1
+; format-padding = 1
 
 
 [module/pulseaudio]
