--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -2,9 +2,9 @@
 
 #--------------------------------
 #
-# Last modification : 2023.05.15
+# Last modification : 2023.05.20
 # Author            : Lasercata
-# Version           : v1.6.6
+# Version           : v1.7.6
 #
 #--------------------------------
 
@@ -243,10 +243,10 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 #}}}
 
-#------Clipboard manager (diodon)
+#------Clipboard manager (greenclip: https://github.com/erebe/greenclip)
 #{{{
-exec_always --no-startup-id diodon
-bindsym Control+Mod1+c exec diodon
+exec_always --no-startup-id "greenclip daemon"
+bindsym Control+Mod1+c exec rofi -theme Monokai -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
 # }}}
 
 #------Hide mouse cursor when typing (xbanish)
