tmux: adding border colors
set them to #ff4500

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 #--------------------------------------------------
 #
 # Author        :   Lasercata
-# Last modif    :   2023.05.12
-# Version       :   v2.3
+# Last modif    :   2023.05.21
+# Version       :   v2.3.1
 #
 #--------------------------------------------------
 
@@ -65,6 +65,10 @@ set -g @sidebar-tree-command 'tree -C' #Colorize the tree
 
 # Tmux line
 source ~/.tmux-status.conf
+
+#---Border color
+set -g pane-border-style "fg=#ff4500"
+set -g pane-active-border-style "fg=#ff4500"
 
 #-Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
