tmux: better non focus border color
set it to a darker ff4500 : 812200

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 #
 # Author        :   Lasercata
 # Last modif    :   2023.05.21
-# Version       :   v2.3.1
+# Version       :   v2.3.2
 #
 #--------------------------------------------------
 
@@ -67,7 +67,7 @@ set -g @sidebar-tree-command 'tree -C' #Colorize the tree
 source ~/.tmux-status.conf
 
 #---Border color
-set -g pane-border-style "fg=#ff4500"
+set -g pane-border-style "fg=#812200"
 set -g pane-active-border-style "fg=#ff4500"
 
 #-Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
